--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     "react-native": "0.49.3",
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-persist": "^4.10.1",
+    "redux-saga": "^0.15.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.1",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0-beta.5"
   },
