--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "devDependencies": {
     "babel-eslint": "^8.0.1",
     "babel-jest": "21.2.0",
+    "babel-plugin-root-import": "^5.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-remove-console": "^6.8.5",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^16.0.0",
