--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "16.0.0-beta.5",
-    "react-native": "0.49.3",
+    "react-native": "^0.49.3",
     "react-native-dropdownalert": "^3.1.2",
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
